--- a/parent-app/package.json
+++ b/parent-app/package.json
@@ -10,13 +10,12 @@
   },
   "dependencies": {
     "@iframe-test/shared-components": "workspace:*",
+    "lucide-react": "^0.263.1",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -24,7 +23,7 @@
     "eslint": "^9.30.1",
     "eslint-config-next": "^15.3.5",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
