--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "dev": "concurrently \"pnpm --filter iframe-app dev\" \"pnpm --filter parent-app dev\"",
     "build": "pnpm --filter shared-components build && pnpm --filter iframe-app build && pnpm --filter parent-app build",
-    "build:components": "pnpm --filter shared-components build"
+    "build:components": "pnpm --filter shared-components build",
+    "deploy:prepare": "node scripts/deploy.js",
+    "deploy:iframe": "cd deploy/iframe-app-deploy && vercel --prod --yes",
+    "deploy:parent": "cd deploy/parent-app-deploy && vercel --prod --yes",
+    "deploy": "pnpm run deploy:prepare && pnpm run deploy:iframe && pnpm run deploy:parent"
   },
   "workspaces": [
     "shared-components",
