--- a/parent-app/package.json
+++ b/parent-app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack --port 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
